@@ -27,3 +27,5 @@ Version 2024.12.1
 
 Version 2024.12.2
 - Enhanced the EnsureSpace element to work dynamically without a pre-configured vertical space threshold.
+
+- Improved table rendering stability in rare scenarios.
